[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"
authors = ["UAV Detection System Team"]
description = "无人机反制预警系统后端 - Rust版"

[dependencies]
tokio = { version = "1.28", features = ["full", "sync"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
